
TODO:
	- move "Manual Repository" from ::Object into separate object
	- subs could not only list 'Inherited from', but also 'Extended by'
	- in POD, group "Inherited" referenced subs?

version 3.04:

	Changes:
	- HTML show structural examples before subs

	Fixes:
	- fix split skip_links
	- fix warning message with an option uses non-existing P
	- fix cleanup in HTML
	- fix utf8 problems

	Improvements:
	- html output support numbered items.

version 3.03: Mon  8 Sep 12:57:12 CEST 2025

	Changes:
	- documentation tree now in OODoc::Index, not global.
	- manual->index became manual->overview.

	Fixes:
	- html template: functions not shown alphabetically.
	- html link to specific options

	Improvements:
	- warning in addSubroutine()
	- display of ties and overload in both POD and HTML
	- add OODoc::Examples for Markov parser
	- pod diagnostics show which function produces them.
	- subsubsection is h5 in html
	- publicationIndex() hidden

version 3.02: Fri 15 Aug 14:52:20 CEST 2025

	Fixes:
	- option default now in auto-PMC scheme.

	Improvements:
	- oorestyle remove C<> and M<> where not needed.
	- oorestyle default [] and {}
	- apply oorestyle to OODoc
	- remove "Commonly used functions" section
	- html display of diagnostics
	- export inheritance structure

version 3.01: Thu 14 Aug 11:14:20 CEST 2025

	Changes:
	- $doc->prepare() becomes $doc->finalize()

	Fixes:
	- parser html accept C<<...>> syntax
	- parser html accept S<>, X<>, and Z<>
	- parser F<url> must be L<url>
	- parser F<> in italic

	Improvements:
	- parser add markup P<>
	- parser more documentation
	- link to metacpan.org, not search.cpan.org
	- parser auto-P<>, auto-M<>, and auto-C<>
	- add other Log::Report levels to diagnostics: info, notice, alert, failure
	- documentation improvements

version 3.00: Sat  2 Aug 14:59:32 CEST 2025

	Changes:
	- $oodoc->create()  -->  $oodoc->formatter->createPages
	- parameters to oodist and in the Makefile.PL via META